--- a/Infrastructure/Skinet.Infrastructure.csproj
+++ b/Infrastructure/Skinet.Infrastructure.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\Core\Skinet.Core.csproj" />
   </ItemGroup>
 
 </Project>
