--- a/API/ShopeStore.API.csproj
+++ b/API/ShopeStore.API.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
@@ -22,8 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Skinet.Core.csproj" />
-    <ProjectReference Include="..\Infrastructure\Skinet.Infrastructure.csproj" />
+    <ProjectReference Include="..\Core\ShopeStore.Core.csproj" />
+    <ProjectReference Include="..\Infrastructure\ShopeStore.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
