--- a/API/ShopeStore.API.csproj
+++ b/API/ShopeStore.API.csproj
@@ -22,8 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Skinet.Core.csproj" />
-    <ProjectReference Include="..\Infrastructure\Skinet.Infrastructure.csproj" />
+    <ProjectReference Include="..\Core\ShopeStore.Core.csproj" />
+    <ProjectReference Include="..\Infrastructure\ShopeStore.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
