fix the database issue

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=skinet.db"
+    "ShopeStore": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ShopeStore;Integrated Security=True;Connect Timeout=30;"
   },
   "ApiUrl": "https://localhost:5001/"
 }
